--- a/first_unique.ipynb
+++ b/first_unique.ipynb
@@ -45,6 +45,225 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "\n",
+      "bcb\n",
+      "abcccba\n",
+      "{'A': [('B', 2)], 'C': [('B', 5)]}\n",
+      "{'A': [('B', 2)], 'C': [('B', 1)]}\n",
+      "{'1': [('0', 10)], '0': [('3', 5)], '2': [('3', 4)]}\n",
+      "3\n",
+      "0\n",
+      "1\n",
+      "4\n",
+      "2\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# question1 check whether some anagram of t is a substring of s\n",
+    "def question1(s,t): \n",
+    "    if s.find(t) == -1: # t is not in s\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "print question1(\"Udacity\",\"\")  # True\n",
+    "print question1(\"\",\"Udacity\")  # False\n",
+    "print question1(\"Udacity\",\"ad\")  # False\n",
+    "print question1(\"Udacity\",\"ac\")  # True\n",
+    "\n",
+    "# find the longest palindromic substring contained in a\n",
+    "def question2(a):\n",
+    "    res = \"\"\n",
+    "    for i in xrange(len(a)):\n",
+    "        # for palindromic with odd length, such as 'ada'\n",
+    "        temp = palindromic(a,i,i)\n",
+    "        if len(temp) > len(res):\n",
+    "            res = temp\n",
+    "        \n",
+    "        # for palindromic with even length, such as 'adda'\n",
+    "        temp = palindromic(a,i,i+1)\n",
+    "        if len(temp) > len(res):\n",
+    "            res = temp  \n",
+    "    return res\n",
+    "\n",
+    "def palindromic(string, start, end):\n",
+    "    # the first and the last character much be the same to be a palindromic\n",
+    "    while start >= 0 and end < len(string) and string[start] == string[end]:\n",
+    "        start -= 1\n",
+    "        end += 1\n",
+    "    return string[start+1:end]\n",
+    "\n",
+    "print question2(\"\") # \"\"\n",
+    "print question2(\"abcbdd\")  # bcb\n",
+    "print question2(\"abcccba\")  # abcccba\n",
+    "\n",
+    "# question3  find the minimum spanning tree within an undirected graph G\n",
+    "def sort_list(G): # covert graph into a sorted list\n",
+    "    list0 = []\n",
+    "    for i in G:\n",
+    "        for j in G[i]:\n",
+    "            list0.append((i,j[0],j[1])) \n",
+    "\n",
+    "    list0 = sorted(list0,key=lambda item:item[2])\n",
+    "    # sort list based on weight\n",
+    "    return list0\n",
+    "\n",
+    "def find_prt(parent,i): # find the parent node of a node\n",
+    "    if parent[i] == i:\n",
+    "        return i\n",
+    "    return find_prt(parent,parent[i])\n",
+    "\n",
+    "def update(parent,rank,x,y): # update parent and rank\n",
+    "    if rank[x] < rank[y]:   \n",
+    "        parent[x] = parent[y]\n",
+    "    elif rank[x] > rank[y]:\n",
+    "        parent[y] = parent[x]\n",
+    "    else:\n",
+    "        parent[y] = parent[x]\n",
+    "        # x and y have same rank, then x's rank add 1 \n",
+    "        rank[x] += 1    \n",
+    "        \n",
+    "def question3(G): # apply Kruskal's MST Algorithm\n",
+    "    list_sort = sort_list(G) \n",
+    "    result = dict() ; parent = dict() ; rank = dict()\n",
+    "    i = 0 ; e = 0\n",
+    "    \n",
+    "    for node in G:\n",
+    "        parent[node] = node \n",
+    "        # initial parent is a dictionary whose value is the same as keys\n",
+    "        rank[node] = 0\n",
+    "        # initial rank is a dictionary whose value is 0 for all keys\n",
+    "        # root has highest rank\n",
+    "        \n",
+    "    while e < len(parent) - 1: # e is number of edges\n",
+    "        u,v,w = list_sort[i]\n",
+    "        i = i +1  # loop through the sorted list\n",
+    "        x = find_prt(parent,u)\n",
+    "        y = find_prt(parent,v)\n",
+    "        \n",
+    "        if x != y: # x != y means no cycle has formed\n",
+    "            e = e + 1\n",
+    "            result[u] = [(v,w)] \n",
+    "            update(parent,rank,x,y)\n",
+    "    return result\n",
+    "\n",
+    "G = {'A': [('B', 2)],'B': [('A', 2), ('C', 5)], 'C': [('B', 5)]}\n",
+    "print question3(G)  # {'A': [('B', 2)], 'C': [('B', 5)]}\n",
+    "G = {'A': [('B', 2)],'B': [('A', 2), ('C', 1)], 'C': [('B', 1)]}\n",
+    "print question3(G)  # {'A': [('B', 2)], 'C': [('B', 1)]}\n",
+    "G = {'0': [('1', 10),('2',6),('3',5)],'1': [('0', 10),('3', 15)], \\\n",
+    "     '2': [('3', 4),('0',6)], '3':[('0', 5),('1',15)]}\n",
+    "print question3(G)  # {'1': [('0', 10)], '0': [('3', 5)], '2': [('3', 4)]}\n",
+    "\n",
+    "# question4  Find the least common ancestor between two nodes on a binary search tree.\n",
+    "def question4(T, r, n1, n2):\n",
+    "    T_dict = dict()\n",
+    "    for row in xrange(len(T)):\n",
+    "        if T[row].count(1) == 1: # a node with one child\n",
+    "            T_dict[row] = T[row].index(1)\n",
+    "        elif T[row].count(1) == 2:  # a node with two children\n",
+    "            indices = [i for i, j in enumerate(T[row]) if j == 1]\n",
+    "            T_dict[row] = indices\n",
+    "    while (r - n1) * (r - n2) > 0:  # if both nodes are on the same side of the root\n",
+    "        r = (T_dict[r][0], T_dict[r][1])[n1 > r] # choose which side the two nodes belong\n",
+    "    return r\n",
+    "\n",
+    "print question4([[0, 1, 0, 0, 0],\n",
+    "                 [0, 0, 0, 0, 0],\n",
+    "                 [0, 0, 0, 0, 0],\n",
+    "                 [1, 0, 0, 0, 1],\n",
+    "                 [0, 0, 0, 0, 0]],\n",
+    "                 3,\n",
+    "                 1,\n",
+    "                 4)\n",
+    "# 3\n",
+    "print question4([[0, 0, 0, 0],\n",
+    "                 [0, 0, 0, 0],\n",
+    "                 [1, 0, 0, 1],\n",
+    "                 [0, 1, 0, 0]],\n",
+    "                 2,\n",
+    "                 0,\n",
+    "                 1)\n",
+    "# 0 \n",
+    "print question4([[0, 0, 0, 0, 0, 0],\n",
+    "                 [1, 0, 1, 0, 0, 0],\n",
+    "                 [0, 0, 0, 0, 0, 0],\n",
+    "                 [0, 1, 0, 0, 1, 0],\n",
+    "                 [0, 0, 0, 0, 0, 1],\n",
+    "                 [0, 0, 0, 0, 0, 0]],\n",
+    "                 3,\n",
+    "                 2,\n",
+    "                 1)\n",
+    "# 1\n",
+    "\n",
+    "# question5  Find the element in a singly linked list that's m elements from the end\n",
+    "class Node(object):\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "    \n",
+    "    def question5(self,ll, m):\n",
+    "        main_pt = ll\n",
+    "        ref_pt = ll\n",
+    "        \n",
+    "        count = 0\n",
+    "        if ll is not None:\n",
+    "            while count < m:\n",
+    "                if ref_pt is None:\n",
+    "                    return\n",
+    "                ref_pt = ref_pt.next\n",
+    "                count += 1\n",
+    "        \n",
+    "        while ref_pt is not None:\n",
+    "            main_pt = main_pt.next\n",
+    "            ref_pt = ref_pt.next\n",
+    "        return main_pt.data\n",
+    "\n",
+    "class linkedlist(object):\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        \n",
+    "    def push(self,new_data):\n",
+    "        node = Node(new_data)\n",
+    "        node.next = self.head\n",
+    "        self.head = node\n",
+    "\n",
+    "list0 = linkedlist()\n",
+    "list0.push(2)\n",
+    "list0.push(4)\n",
+    "list0.push(1)\n",
+    "list0.push(6)\n",
+    "print question5(list0.head,2) # 4\n",
+    "\n",
+    "list1 = linkedlist()\n",
+    "list1.push(2)\n",
+    "list1.push(1)\n",
+    "list1.push(6)\n",
+    "print question5(list1.head,1) # 2\n",
+    "\n",
+    "list2 = linkedlist()\n",
+    "list2.push(2)\n",
+    "list2.push(1)\n",
+    "list2.push(6)\n",
+    "print question5(list2.head,4) # None"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,25 +355,353 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': [('B', 2)], 'C': [('B', 5)]}\n",
+      "{'A': [('B', 2)], 'C': [('B', 1)]}\n",
+      "{'1': [('0', 10)], '0': [('3', 5)], '2': [('3', 4)]}\n"
+     ]
+    }
+   ],
    "source": [
+    "def sort_list(G):\n",
+    "    list0 = []\n",
+    "    for i in G:\n",
+    "        for j in G[i]:\n",
+    "            list0.append((i,j[0],j[1]))\n",
+    "\n",
+    "    list0 = sorted(list0,key=lambda item:item[2])\n",
+    "    return list0\n",
+    "\n",
+    "def find_prt(parent,i):\n",
+    "    if parent[i] == i:\n",
+    "        return i\n",
+    "    return find_prt(parent,parent[i])\n",
+    "\n",
+    "def union(parent,rank,x,y):\n",
+    "    if rank[x] < rank[y]:\n",
+    "        parent[x] = parent[y]\n",
+    "    elif rank[x] > rank[y]:\n",
+    "        parent[y] = parent[x]\n",
+    "    else:\n",
+    "        parent[y] = parent[x]\n",
+    "        rank[x] += 1    \n",
+    "        \n",
     "def question3(G):\n",
-    "    "
+    "    list_sort = sort_list(G)\n",
+    "    result = dict() ; parent = dict() ; rank = dict()\n",
+    "    i = 0 ; e = 0\n",
+    "    \n",
+    "    for node in G:\n",
+    "        parent[node] = node\n",
+    "        rank[node] = 0\n",
+    "\n",
+    "    while e < len(parent) - 1:\n",
+    "        u,v,w = list_sort[i]\n",
+    "        i = i +1\n",
+    "        x = find_prt(parent,u)\n",
+    "        y = find_prt(parent,v)\n",
+    "        \n",
+    "        if x!= y:\n",
+    "            e = e + 1\n",
+    "            result[u] = [(v,w)]\n",
+    "            union(parent,rank,x,y)\n",
+    "    return result\n",
+    "\n",
+    "G = {'A': [('B', 2)],'B': [('A', 2), ('C', 5)], 'C': [('B', 5)]}\n",
+    "print question3(G)\n",
+    "G = {'A': [('B', 2)],'B': [('A', 2), ('C', 1)], 'C': [('B', 1)]}\n",
+    "print question3(G)\n",
+    "G = {'0': [('1', 10),('2',6),('3',5)],'1': [('0', 10),('3', 15)], \\\n",
+    "     '2': [('3', 4),('0',6)], '3':[('0', 5),('1',15)]}\n",
+    "print question3(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the least common ancestor between two nodes on a binary search tree."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just walk down from the whole tree's root as long as both p and q are in the same subtree (meaning their values are both smaller or both larger than root's). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def question4(T, r, n1, n2):\n",
+    "    T_dict = dict()\n",
+    "    for row in xrange(len(T)):\n",
+    "        if T[row].count(1) == 1:\n",
+    "            T_dict[row] = T[row].index(1)\n",
+    "        elif T[row].count(1) == 2:\n",
+    "            indices = [i for i, j in enumerate(T[row]) if j == 1]\n",
+    "            T_dict[row] = indices\n",
+    "    while (r - n1) * (r - n2) > 0:\n",
+    "        r = (T_dict[r][0], T_dict[r][1])[n1 > r]\n",
+    "    return r\n",
+    "\n",
+    "print question4([[0, 1, 0, 0, 0],\n",
+    "                 [0, 0, 0, 0, 0],\n",
+    "                 [0, 0, 0, 0, 0],\n",
+    "                 [1, 0, 0, 0, 1],\n",
+    "                 [0, 0, 0, 0, 0]],\n",
+    "                 3,\n",
+    "                 1,\n",
+    "                 4)\n",
+    "print question4([[0, 0, 0, 0],\n",
+    "                 [0, 0, 0, 0],\n",
+    "                 [1, 0, 0, 1],\n",
+    "                 [0, 1, 0, 0]],\n",
+    "                 2,\n",
+    "                 0,\n",
+    "                 1)\n",
+    "print question4([[0, 0, 0, 0, 0, 0],\n",
+    "                 [1, 0, 1, 0, 0, 0],\n",
+    "                 [0, 0, 0, 0, 0, 0],\n",
+    "                 [0, 1, 0, 0, 1, 0],\n",
+    "                 [0, 0, 0, 0, 0, 1],\n",
+    "                 [0, 0, 0, 0, 0, 0]],\n",
+    "                 3,\n",
+    "                 2,\n",
+    "                 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the element in a singly linked list that's m elements from the end."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://www.geeksforgeeks.org/nth-node-from-the-end-of-a-linked-list/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "test = {'A': [('B', 2)],'B': [('A', 2), ('C', 5)], 'C': [('B', 5)]}"
+    "class Node(object):\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "    \n",
+    "    def question5(self,ll, m):\n",
+    "        main_pt = ll\n",
+    "        ref_pt = ll\n",
+    "        \n",
+    "        count = 0\n",
+    "        if ll is not None:\n",
+    "            while count < m:\n",
+    "                if ref_pt is None:\n",
+    "                    return\n",
+    "                ref_pt = ref_pt.next\n",
+    "                count += 1\n",
+    "        \n",
+    "        while ref_pt is not None:\n",
+    "            main_pt = main_pt.next\n",
+    "            ref_pt = ref_pt.next\n",
+    "        return main_pt.data\n",
+    "\n",
+    "class linkedlist(object):\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        \n",
+    "    def push(self,new_data):\n",
+    "        node = Node(new_data)\n",
+    "        node.next = self.head\n",
+    "        self.head = node\n",
+    "\n",
+    "list0 = linkedlist()\n",
+    "list0.push(2)\n",
+    "list0.push(4)\n",
+    "list0.push(1)\n",
+    "list0.push(6)\n",
+    "print question5(list0.head,2)\n",
+    "\n",
+    "list1 = linkedlist()\n",
+    "list1.push(2)\n",
+    "list1.push(1)\n",
+    "list1.push(6)\n",
+    "print question5(list1.head,1)\n",
+    "\n",
+    "list2 = linkedlist()\n",
+    "list2.push(2)\n",
+    "list2.push(1)\n",
+    "list2.push(6)\n",
+    "print question5(list2.head,4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://www.geeksforgeeks.org/greedy-algorithms-set-2-kruskals-minimum-spanning-tree-mst/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3]\n",
+      "[[2, 3, 4], [0, 3, 5], [0, 2, 6], [0, 1, 10], [1, 3, 15]]\n",
+      "2\n",
+      "2\n",
+      "-----\n",
+      "0\n",
+      "0\n",
+      "-----\n",
+      "0\n",
+      "2\n",
+      "-----\n",
+      "0\n",
+      "2\n",
+      "-----\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    " \n",
+    "#Class to represent a graph\n",
+    "class Graph:\n",
+    " \n",
+    "    def __init__(self,vertices):\n",
+    "        self.V= vertices #No. of vertices\n",
+    "        self.graph = [] # default dictionary to store graph\n",
+    "         \n",
+    "  \n",
+    "    # function to add an edge to graph\n",
+    "    def addEdge(self,u,v,w):\n",
+    "        self.graph.append([u,v,w])\n",
+    " \n",
+    "    # A utility function to find set of an element i\n",
+    "    # (uses path compression technique)\n",
+    "    def find(self, parent, i):\n",
+    "        if parent[i] == i:\n",
+    "            return i\n",
+    "        return self.find(parent, parent[i])\n",
+    " \n",
+    "    # A function that does union of two sets of x and y\n",
+    "    # (uses union by rank)\n",
+    "    def union(self, parent, rank, x, y):\n",
+    "        xroot = self.find(parent, x)\n",
+    "        yroot = self.find(parent, y)\n",
+    " \n",
+    "        # Attach smaller rank tree under root of high rank tree\n",
+    "        # (Union by Rank)\n",
+    "        if rank[xroot] < rank[yroot]:\n",
+    "            parent[xroot] = yroot\n",
+    "        elif rank[xroot] > rank[yroot]:\n",
+    "            parent[yroot] = xroot\n",
+    "        #If ranks are same, then make one as root and increment\n",
+    "        # its rank by one\n",
+    "        else :\n",
+    "            parent[yroot] = xroot\n",
+    "            rank[xroot] += 1\n",
+    " \n",
+    "    # The main function to construct MST using Kruskal's algorithm\n",
+    "    def KruskalMST(self):\n",
+    " \n",
+    "        result =[] #This will store the resultant MST\n",
+    " \n",
+    "        i = 0 # An index variable, used for sorted edges\n",
+    "        e = 0 # An index variable, used for result[]\n",
+    " \n",
+    "        #Step 1:  Sort all the edges in non-decreasing order of their\n",
+    "        # weight.  If we are not allowed to change the given graph, we\n",
+    "        # can create a copy of graph\n",
+    "        self.graph =  sorted(self.graph,key=lambda item: item[2])\n",
+    "        #print self.graph\n",
+    " \n",
+    "        parent = [] ; rank = []\n",
+    " \n",
+    "        # Create V subsets with single elements\n",
+    "        for node in range(self.V):\n",
+    "            parent.append(node)\n",
+    "            rank.append(0)\n",
+    "     \n",
+    "        print parent\n",
+    "        print self.graph\n",
+    "        # Number of edges to be taken is equal to V-1\n",
+    "        while e < self.V -1 :\n",
+    " \n",
+    "            # Step 2: Pick the smallest edge and increment the index\n",
+    "            # for next iteration\n",
+    "            u,v,w =  self.graph[i]\n",
+    "            i = i + 1\n",
+    "            x = self.find(parent, u)\n",
+    "            print u\n",
+    "            print x\n",
+    "            print \"-----\"\n",
+    "            y = self.find(parent ,v)\n",
+    "#             print y\n",
+    " \n",
+    "            # If including this edge does't cause cycle, include it\n",
+    "            # in result and increment the index of result for next edge\n",
+    "            if x != y:\n",
+    "                e = e + 1  \n",
+    "                result.append([u,v,w])\n",
+    "                self.union(parent, rank, x, y)          \n",
+    "            # Else discard the edge\n",
+    " \n",
+    "#         # print the contents of result[] to display the built MST\n",
+    "#         print \"Following are the edges in the constructed MST\"\n",
+    "#         for u,v,weight  in result:\n",
+    "#             #print str(u) + \" -- \" + str(v) + \" == \" + str(weight)\n",
+    "#             print (\"%d -- %d == %d\" % (u,v,weight))\n",
+    " \n",
+    "\n",
+    "g = Graph(4)\n",
+    "g.addEdge(0, 1, 10)\n",
+    "g.addEdge(0, 2, 6)\n",
+    "g.addEdge(0, 3, 5)\n",
+    "g.addEdge(1, 3, 15)\n",
+    "g.addEdge(2, 3, 4)\n",
+    " \n",
+    "g.KruskalMST()"
    ]
   }
  ],
