check balanced BT

--- a/leetcode_test.ipynb
+++ b/leetcode_test.ipynb
@@ -2,14 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "s= \"adcgfef\"\n",
+    "l = list(s)\n",
+    "for i in xrange(0,len(s),4):\n",
+    "    l[i:i+k] = reversed(l[i:i+k])\n",
+    "return \"\".join(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import re\n",
-    "import itertools"
+    "def generate(numRows):\n",
+    "        res = [[1]]\n",
+    "        for i in range(1, numRows):\n",
+    "            res += [map(lambda x, y: x+y, res[-1] + [0], [0] + res[-1])]\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate(5)"
    ]
   },
   {
