slding window algorithm

--- a/Substring_SlidingWindow.ipynb
+++ b/Substring_SlidingWindow.ipynb
@@ -41,7 +41,44 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def findAnagrams(s, p):\n",
+    "    res = []\n",
+    "    if s == \"\" or len(s) == 0 or p == \"\" or len(p)  == 0:\n",
+    "        return res\n",
+    "    hashtable = [0] * 128\n",
+    "    for i in p :\n",
+    "        hashtable[ord(i)] += 1\n",
+    "    \n",
+    "    left = 0 \n",
+    "    right = 0\n",
+    "    count = len(p)\n",
+    "    \n",
+    "    while right < len(s):\n",
+    "#         //move right everytime, if the character exists in p's hash, decrease the count\n",
+    "#         //current hash value >= 1 means the character is existing in p\n",
+    "        if hashtable[ord(s[right])] >= 1:\n",
+    "            count -= 1\n",
+    "        hashtable[ord(s[right])] -= 1\n",
+    "        right += 1\n",
+    "        \n",
+    "#         //when the count is down to 0, means we found the right anagram\n",
+    "#         //then add window's left to result list        \n",
+    "        if count == 0:\n",
+    "            res.append(left)\n",
+    "        \n",
+    "#         //if we find the window's size equals to p, then we have to move left (narrow the window) to find the new match window\n",
+    "#         //++ to reset the hash because we kicked out the left\n",
+    "#         //only increase the count if the character is in p\n",
+    "#         //the count >= 0 indicate it was original in the hash, cuz it won't go below 0\n",
+    "        if right - left == len(p):\n",
+    "            if hashtable[ord(s[left])] >= 0:\n",
+    "                count += 1\n",
+    "            hashtable[ord(s[left])] += 1\n",
+    "            left += 1\n",
+    "        \n",
+    "    return res"
+   ]
   },
   {
    "cell_type": "markdown",
