palindrome in linked list

--- a/LinkedList_Palindrome.ipynb
+++ b/LinkedList_Palindrome.ipynb
@@ -4,8 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "???? "
+    "234  Palindrome Linked List"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.next = None\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def isPalindrome(self, head):\n",
+    "        \"\"\"\n",
+    "        :type head: ListNode\n",
+    "        :rtype: bool\n",
+    "        \"\"\"\n",
+    "        rev = None\n",
+    "        slow = fast = head\n",
+    "        while fast and fast.next:\n",
+    "            fast = fast.next.next\n",
+    "            rev, rev.next, slow = slow, rev, slow.next\n",
+    "\n",
+    "        if fast:\n",
+    "            slow = slow.next\n",
+    "        while rev and rev.val == slow.val:\n",
+    "            slow = slow.next\n",
+    "            rev = rev.next\n",
+    "        return not rev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
