--- a/BitManipulationBinaryManipulation.ipynb
+++ b/BitManipulationBinaryManipulation.ipynb
@@ -1,29 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-666a86b28ec9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbase\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "int(x, base=10)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -398,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -406,21 +383,21 @@
     {
      "data": {
       "text/plain": [
-       "'110010'"
+       "'10'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'{0:0b}'.format(50)"
+    "'{0:0b}'.format(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -436,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -447,13 +424,49 @@
        "3"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "count_one(50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "338 Counting Bits (return list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def countBits(num):\n",
+    "    \"\"\"\n",
+    "    :type num: int\n",
+    "    :rtype: List[int]\n",
+    "    \"\"\"\n",
+    "    res = [0] * (num + 1)\n",
+    "    for i in xrange(num+1):\n",
+    "        res[i] = res[i >> 1] + (i & 1)\n",
+    "    return res\n",
+    "\n",
+    "print countBits(5)"
    ]
   },
   {
@@ -1183,7 +1196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.7"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
