add prob. find two number appear once

--- a/BitManipulation.ipynb
+++ b/BitManipulation.ipynb
@@ -1178,6 +1178,61 @@
    "source": [
     "hammingWeight(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 260. Single Number III"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def singleNumber(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        diff = 0\n",
+    "        for n in nums:\n",
+    "            diff ^= n\n",
+    "        # print diff\n",
+    "        diff &= -diff\n",
+    "        # print diff\n",
+    "        \n",
+    "        res = [0,0]\n",
+    "        for n in nums:\n",
+    "            if n & diff == 0:\n",
+    "                res[0] ^= n\n",
+    "            else:\n",
+    "                res[1] ^= n\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
