--- a/Graph_BfsDfs.ipynb
+++ b/Graph_BfsDfs.ipynb
@@ -193,6 +193,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 547. Friend Circles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def findCircleNum(self, M):\n",
+    "        \"\"\"\n",
+    "        :type M: List[List[int]]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        cir = set()\n",
+    "        l = len(M)\n",
+    "        \n",
+    "        def OneCircle(row):\n",
+    "            for i,v in enumerate(M[row]):\n",
+    "                if v and i not in cir:\n",
+    "                    cir.add(i)\n",
+    "                    OneCircle(i)\n",
+    "        \n",
+    "        count = 0\n",
+    "        for i in xrange(l) :\n",
+    "            if i not in cir:\n",
+    "                OneCircle(i)\n",
+    "                count += 1\n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### BFS"
    ]
   },
