--- a/UsefulMethod.ipynb
+++ b/UsefulMethod.ipynb
@@ -155,13 +155,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "zip and unzip"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2, 3), (4, 5, 6)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  lst1, lst2 = zip(*zipped_list)  should give you the unzipped list.\n",
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "\n",
+    "zipped_list = zip(a,b)\n",
+    "zip(*zipped_list)"
+   ]
   },
   {
    "cell_type": "code",
