--- a/UsefulMethod.ipynb
+++ b/UsefulMethod.ipynb
@@ -189,13 +189,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Counter"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import collections\n",
+    "def fourSumCount(A, B, C, D):\n",
+    "    AB = collections.Counter(a+b for a in A for b in B)\n",
+    "    print AB\n",
+    "    print AB[-4]\n",
+    "    return sum(AB[-c-d] for c in C for d in D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({0: 2, 1: 1, -1: 1})\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fourSumCount([1,2],[-2,-1],[-1,2],[0,2])"
+   ]
   }
  ],
  "metadata": {
