--- a/BT_Preorder_Postorder.ipynb
+++ b/BT_Preorder_Postorder.ipynb
@@ -48,6 +48,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a binary tree, return the tilt of the whole tree.\n",
+    "\n",
+    "The tilt of a tree node is defined as the absolute difference between the sum of all left subtree node values and the sum of all right subtree node values. Null node has tilt 0."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
