--- a/BitManipulation.ipynb
+++ b/BitManipulation.ipynb
@@ -397,6 +397,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'00000000000000000000000000000010'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'{:032b}'.format(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": true
@@ -1217,13 +1239,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 477. Total Hamming Distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Hamming distance between two integers is the number of positions at which the corresponding bits are different."
+   ]
   },
   {
    "cell_type": "code",
@@ -1232,7 +1261,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution(object):\n",
+    "    def totalHammingDistance(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        return sum(b.count('0') * b.count('1') for b in zip(*map('{:032b}'.format,nums)))"
+   ]
   }
  ],
  "metadata": {
