--- a/String_Regex.ipynb
+++ b/String_Regex.ipynb
@@ -26,6 +26,9 @@
     "    import re\n",
     "    for i in range(n-1):\n",
     "        s = re.sub(r'(.)\\1*',lambda x : str(len(x.group(0))) + x.group(1),s)\n",
+    "        # re.sub(pattern, repl, string, count=0, flags=0)\n",
+    "        # Return the string obtained by replacing the leftmost non-overlapping occurrences of pattern \n",
+    "        # in string by the replacement repl. If the pattern isn’t found, string is returned unchanged.\n",
     "    return s"
    ]
   }
@@ -46,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.7"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
