add comment and title

--- a/String_Regex.ipynb
+++ b/String_Regex.ipynb
@@ -29,6 +29,7 @@
     "        # re.sub(pattern, repl, string, count=0, flags=0)\n",
     "        # Return the string obtained by replacing the leftmost non-overlapping occurrences of pattern \n",
     "        # in string by the replacement repl. If the pattern isn’t found, string is returned unchanged.\n",
+    "        # (.) captures one character and \\1* covers its repetitions.\n",
     "    return s"
    ]
   }
