--- a/String_Regex.ipynb
+++ b/String_Regex.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 38. Count and Say"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The count-and-say sequence is the sequence of integers beginning as follows:\n",
     "1, 11, 21, 1211, 111221, ...\n",
     "Given an integer n, generate the nth sequence."
@@ -25,13 +32,40 @@
     "    s = \"1\"\n",
     "    import re\n",
     "    for i in range(n-1):\n",
-    "        s = re.sub(r'(.)\\1*',lambda x : str(len(x.group(0))) + x.group(1),s)\n",
+    "        s = re.sub(r'(.)\\1*', lambda x : str(len(x.group(0))) + x.group(1), s)\n",
     "        # re.sub(pattern, repl, string, count=0, flags=0)\n",
     "        # Return the string obtained by replacing the leftmost non-overlapping occurrences of pattern \n",
     "        # in string by the replacement repl. If the pattern isn’t found, string is returned unchanged.\n",
     "        # (.) captures one character and \\1* covers its repetitions.\n",
     "    return s"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
