add a different merge function

--- a/List_Mergesort.ipynb
+++ b/List_Mergesort.ipynb
@@ -111,6 +111,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def merge3(a,b):\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    c= []\n",
+    "    len1 =len(a)\n",
+    "    len2 = len(b)\n",
+    "    for k in range(len1+len2):\n",
+    "        if i == len1:\n",
+    "            c += b[j:]\n",
+    "            break\n",
+    "        elif j == len2:\n",
+    "            c += a[i:]\n",
+    "            break\n",
+    "        elif a[i] <b[j]:\n",
+    "            c.append(a[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            c.append(b[j])\n",
+    "            j += 1\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 6]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge3([2,3],[1,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {
     "collapsed": true
