adapt algorithm to different input

--- a/Graph_BfsDfs.ipynb
+++ b/Graph_BfsDfs.ipynb
@@ -198,34 +198,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "class Solution(object):\n",
-    "    def findCircleNum(self, M):\n",
-    "        \"\"\"\n",
-    "        :type M: List[List[int]]\n",
-    "        :rtype: int\n",
-    "        \"\"\"\n",
-    "        cir = set()\n",
-    "        l = len(M)\n",
-    "        \n",
-    "        def OneCircle(row):\n",
-    "            for i,v in enumerate(M[row]):\n",
-    "                if v and i not in cir:\n",
-    "                    cir.add(i)\n",
-    "                    OneCircle(i)\n",
-    "        \n",
-    "        count = 0\n",
-    "        for i in xrange(l) :\n",
-    "            if i not in cir:\n",
+    "def findCircleNum(M):\n",
+    "    \"\"\"\n",
+    "    :type M: List[List[int]]\n",
+    "    :rtype: int\n",
+    "    \"\"\"\n",
+    "    cir = set()\n",
+    "    l = len(M)\n",
+    "\n",
+    "    def OneCircle(row):\n",
+    "        for i,v in enumerate(M[row]):\n",
+    "            v = int(v)\n",
+    "            if v and i not in cir:\n",
+    "                cir.add(i)\n",
     "                OneCircle(i)\n",
-    "                count += 1\n",
-    "        return count"
+    "\n",
+    "    count = 0\n",
+    "    for i in xrange(l) :\n",
+    "        if i not in cir:\n",
+    "            OneCircle(i)\n",
+    "            count += 1\n",
+    "    return count"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findCircleNum(['1100','1110','0110','0001'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findCircleNum([[1,1,0,0,],[1,1,1,0],[0,1,1,0],[0,0,0,1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
