clone graph DFS

--- a/Graph_BfsDfs.ipynb
+++ b/Graph_BfsDfs.ipynb
@@ -272,6 +272,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 133. Clone Graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clone an undirected graph. Each node in the graph contains a label and a list of its neighbors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Definition for a undirected graph node\n",
+    "# class UndirectedGraphNode:\n",
+    "#     def __init__(self, x):\n",
+    "#         self.label = x\n",
+    "#         self.neighbors = []\n",
+    "\n",
+    "class Solution:\n",
+    "    # @param node, a undirected graph node\n",
+    "    # @return a undirected graph node\n",
+    "    def cloneGraph(self, node):  #DFS\n",
+    "        if not node:\n",
+    "            return node\n",
+    "        root = UndirectedGraphNode(node.label)\n",
+    "        stack = [node] #object\n",
+    "        visit = {}\n",
+    "        visit[node.label] = root \n",
+    "        # key is label, value is the label of the UDRN\n",
+    "        while stack:\n",
+    "            top = stack.pop() #object\n",
+    "            for n in top.neighbors: #object\n",
+    "                if n.label not in visit:\n",
+    "                    stack.append(n)  #object\n",
+    "                    visit[n.label] = UndirectedGraphNode(n.label)\n",
+    "                visit[top.label].neighbors.append(visit[n.label])\n",
+    "        return root"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
