--- a/List_Mergesort.ipynb
+++ b/List_Mergesort.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "* recursively sort the first half of the input array;\n",
-    "* vrecursively sort the second half of the input arrary; \n",
+    "* recursively sort the second half of the input arrary; \n",
     "* Merge two sorted sub-lists into one list."
    ]
   },
@@ -236,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.7"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
