--- a/_test.ipynb
+++ b/_test.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# cache = {}\n",
@@ -36,6 +38,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def trythis(array):\n",
+    "    end = 0\n",
+    "    res = []\n",
+    "    subArray = [];\n",
+    "    maxi = array[0]\n",
+    "\n",
+    "    while end < len(array):\n",
+    "        subArray.append(array[end])\n",
+    "        if array[end] > maxi:\n",
+    "            maxi = array[end]\n",
+    "            res.append(subArray)\n",
+    "            subArray = []\n",
+    "        end += 1\n",
+    "    res.append(subArray)   \n",
+    "        \n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[3],[4],[5],[9,7],[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "(2 -> 4 -> 3) + (5 -> 6 -> 4)\n",
+    " 7 -> 0 -> 8\n",
+    "342 + 465 = 807."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -50,12 +109,211 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode(object):\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.next = None\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def samelen(self, s1, s2):\n",
+    "        if len(s1) > len(s2):\n",
+    "            s2 += [0] * (len(s1) - len(s2))\n",
+    "        else:\n",
+    "            s1 += [0] * (len(s2) - len(s1))\n",
+    "    def addTwoNumbers(self, l1, l2):\n",
+    "        \"\"\"\n",
+    "        :type l1: ListNode\n",
+    "        :type l2: ListNode\n",
+    "        :rtype: ListNode\n",
+    "        \"\"\"\n",
+    "        s1 = []\n",
+    "        s2 = []\n",
+    "        res = []\n",
+    "        while l1 != None:\n",
+    "            s1.append(l1.val)\n",
+    "            l1 = l1.next\n",
+    "        while l2 != None:\n",
+    "            s2.append(l2.val)\n",
+    "            l2 = l2.next\n",
+    "        c = 0\n",
+    "        self.samelen(s1, s2)\n",
+    "        for i in range(len(s1):\n",
+    "            if s1[i] + s2[i] < 10:\n",
+    "                if c == 0:\n",
+    "                    res.append(s1[i] + s2[i])\n",
+    "                else:\n",
+    "                    res.append(s1[i] + s2[i]+1)\n",
+    "            else:\n",
+    "                res.append(s1[i] + s2[i] - 10)\n",
+    "                c = 1\n",
+    "        len1 = max(len(s1), len(s2))\n",
+    "        \n",
+    "        return res"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 108,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in zip([2,3],[1]):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "def trythis(array):\n",
+    "    right_min = [array[-1]]\n",
+    "    left_max = [array[0]]\n",
+    "    # right\n",
+    "    for i in range(len(array)-2, -1, -1):\n",
+    "        if array[i] < right_min[-1]:\n",
+    "            right_min.append(array[i])\n",
+    "        else:\n",
+    "            right_min.append(right_min[-1])\n",
+    "    # left\n",
+    "    for j in range(1,len(array),1):\n",
+    "        if array[j] > left_max[-1]:\n",
+    "            left_max.append(array[j])\n",
+    "        else:\n",
+    "            left_max.append(left_max[-1])\n",
+    "    \n",
+    "    print(right_min[::-1])\n",
+    "    print(left_max)\n",
+    "    res = []\n",
+    "    temp = []\n",
+    "    for index, (right, left) in enumerate(zip(right_min[::-1], left_max)):\n",
+    "        if right >= left:\n",
+    "            if temp != []:\n",
+    "                res.append(copy.deepcopy(temp))\n",
+    "                temp = []\n",
+    "            res.append([array[index]])\n",
+    "        else:\n",
+    "            temp.append(array[index])\n",
+    "    if res == []:\n",
+    "        res = [temp]\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 7, 7, 10, 12, 13]\n",
+      "[3, 4, 5, 9, 9, 10, 12, 13]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[3], [4], [5], [9, 7], [10], [12], [13]]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array1 = [3,4,5,9,7,10,12,13]\n",
+    "trythis(array1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[3,4,5,9,2,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[3, 4], [5], [9], [7, 10]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array2 = [3,4,5,9,7,10]\n",
+    "trythis(array2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[3],[4],[5],[9,7],[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "array2 = [3,4,5,6,7]\n",
+    "trythis(array2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[[3],[4],[5],[6],[7]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cache = {}\n",
@@ -269,7 +527,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = [1,2]\n",
@@ -381,7 +641,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def findAnagrams(s, p):\n",
@@ -429,7 +691,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def countAndSay(n):\n",
@@ -472,7 +736,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def isValid(s):\n",
@@ -592,7 +858,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "l = [6, 7, 0, 6, 7, 0]"
@@ -601,7 +869,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "map = ['0','1','2','3','4','5','6','7','8','9','a','b','c','d','e','f']\n",
@@ -718,7 +988,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def findRelativeRanks( nums):\n",
@@ -787,7 +1059,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def addStrings(num1, num2):\n",
