--- a/Substring_SlidingWindow.ipynb
+++ b/Substring_SlidingWindow.ipynb
@@ -35,8 +35,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a string s and a non-empty string p, find all the start indices of p's anagrams in s.\n",
+    "\n",
+    "Strings consists of lowercase English letters only and the length of both strings s and p will not be larger than 20,100.\n",
+    "\n",
+    "The order of output does not matter."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +60,6 @@
     "    hashtable = [0] * 128\n",
     "    for i in p :\n",
     "        hashtable[ord(i)] += 1\n",
-    "    \n",
     "    left = 0 \n",
     "    right = 0\n",
     "    count = len(p)\n",
@@ -61,7 +71,7 @@
     "            count -= 1\n",
     "        hashtable[ord(s[right])] -= 1\n",
     "        right += 1\n",
-    "        \n",
+    "\n",
     "#         //when the count is down to 0, means we found the right anagram\n",
     "#         //then add window's left to result list        \n",
     "        if count == 0:\n",
@@ -81,6 +91,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findAnagrams(\"ababa\", \"ab\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,13 +118,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Given a string, find the length of the longest substring without repeating characters.\n",
+    "\n",
+    "Examples:\n",
+    "\n",
+    "Given \"abcabcbb\", the answer is \"abc\", which the length is 3.\n",
+    "\n",
+    "Given \"bbbbb\", the answer is \"b\", with the length of 1.\n",
+    "\n",
+    "Given \"pwwkew\", the answer is \"wke\", with the length of 3. Note that the answer must be a substring, \"pwke\" is a subsequence and not a substring."
+   ]
   },
   {
    "cell_type": "code",
@@ -192,21 +230,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
